TEST_PROGRAMS/INVALID/Ossama_Ahmed/errorone.min
#This program will test unrecognized tokens in comments & 
#This program will test declarations in between statments !!!
#This program will test declarations in different types !!!



var x: int;
var y: float;  
var z: string;

x=2.03;
y=4;

var z: float;
